# MCU-Purple-Baseline

./: Dockerfile  Dockerfile.groot1  Dockerfile.rocket1  Dockerfile.steve1  Dockerfile.vpt  README.md  pyproject.toml  requirements.txt
.github/workflows/: test-and-publish.yml
src/action/: __init__.py  action_space.py  pipeline.py
src/agent/: __init__.py  base.py  download.py  noop.py  registry.py
src/agent/groot1/: __init__.py  agent.py  model.py  preprocess.py
src/agent/llm/: __init__.py  action_map.py  agent.py  client.py  model.py  preprocess.py  prompt.py
src/agent/rocket1/: __init__.py  action_formatter.py  adapter.py  agent.py  decode.py  input_validator.py  model.py  preprocess.py
src/agent/steve1/: __init__.py  agent.py  model.py  preprocess.py
src/agent/vpt/: __init__.py  agent.py  model.py  preprocess.py
src/protocol/: __init__.py  models.py
src/server/: app.py  executor.py  session_manager.py
tests/: conftest.py  test_agent_card.py  test_init_obs_action.py
