[project]
name = "mcu-purple-baseline"
version = "0.1.0"
description = "A2A-compatible purple baseline agent for MCU AgentBeats benchmark"
requires-python = ">=3.11"

dependencies = [
  # A2A server stack (recommendation: http-server extra)
  "a2a-sdk[http-server]>=0.3.0",
  "uvicorn>=0.23",

  # runtime utilities used by server/executor
  "pydantic>=2.0",
  "numpy>=1.24",
  "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
rocket1 = [
  "torch",
  "torchvision",
  "einops",
  "timm",
  "huggingface_hub",
  # MineStudio if pip install
  # "minestudio",
]

dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "httpx>=0.25",
  "pyyaml>=6.0",
]

[project.scripts]
mcu-purple = "src.server.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
