[project]
name = "mcu-purple-baseline"
version = "0.1.0"
description = "A2A-compatible purple baseline agent for MCU AgentBeats benchmark"
requires-python = ">=3.11,<3.12"

dependencies = [
  # A2A server stack (recommendation: http-server extra)
  "a2a-sdk>=0.3.5",
  "google-adk>=1.14.1",
  "google-genai>=1.36.0",
  "litellm>=1.0.0",
  "nest-asyncio>=1.6.0",
  "psutil>=7.2.1",
  "pydantic>=2.11.9",
  "python-dotenv>=1.1.1",
  "uvicorn>=0.35.0",
  "psutil>=7.2.1",
  "pyglet==1.4.0b1",
  # MineStudio from github
  "minestudio @ git+https://github.com/CraftJarvis/MineStudio.git"
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "httpx>=0.25",
  "pyyaml>=6.0",
]

[project.scripts]
mcu-purple = "src.server.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
